--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; URL='./defense-schloerke.pdf'" />
+    <meta http-equiv="refresh" content="0; URL='./defense-schloerke-single.pdf'" />
   </head>
   <body>
   </body>
